set target=none

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="grid">
         <div class="center">
             <div class="hexagon">
-                <a href="https://github.com" class="hex-icon">
+                <a href="https://github.com" class="hex-icon" target="none">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
@@ -21,7 +21,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://discord.com/app" class="hex-icon">
+                <a href="https://discord.com/app" class="hex-icon" target="none">
                     <i class="fa-brands fa-discord"></i>
                 </a>
             </div>
@@ -29,7 +29,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://www.youtube.com" class="hex-icon">
+                <a href="https://www.youtube.com" class="hex-icon" target="none">
                     <i class="fa-brands fa-youtube"></i>
                 </a>
             </div>
@@ -37,7 +37,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://mail.proton.me" class="hex-icon">
+                <a href="https://mail.proton.me" class="hex-icon" target="none">
                     <i class="fa-regular fa-envelope"></i>
                 </a>
             </div>
@@ -45,7 +45,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://www.reddit.com" class="hex-icon">
+                <a href="https://www.reddit.com" class="hex-icon" target="none">
                     <i class="fa-brands fa-reddit"></i>
                 </a>
             </div>
