add sick mouse effect

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://kit.fontawesome.com/2b5d740196.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 5x2 grid -->
+    <div id="blob"></div>
+    <div id="blur"></div>
+    
     <div class="grid">
         <div class="center">
             <div class="hexagon">
@@ -52,4 +54,5 @@
         </div>
     </div>
 </body>
+<script src="./script.js"></script>
 </html>
