add wikipedia icon

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://www.reddit.com" class="hex-icon" target="none">
-                    <i class="fa-brands fa-reddit"></i>
+                <a href="https://en.wikipedia.com/en" class="hex-icon" target="none">
+                    <i class="fa-brands fa-wikipedia"></i>
                 </a>
             </div>
         </div>
