--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="center">
             <div class="hexagon">
                 <a href="https://en.wikipedia.com/en" class="hex-icon" target="none">
-                    <i class="fa-brands fa-wikipedia"></i>
+                    <i class="fa-brands fa-wikipedia-w"></i>
                 </a>
             </div>
         </div>
