add settings pane

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <div id="blob"></div>
     <div id="blur"></div>
 
+    <div class="settings">
+        <i class="fas fa-cog" id="settings-button"></i>
+    </div>
+
+    <div class="sidemenu" id="sidemenu">
+        <!-- Add close button -->
+        <div class="close-button">
+            <i class="fas fa-times" id="close-button"></i>
+        </div>
+    </div>
+        
     <div class="grid">
         <div class="center">
             <div class="hexagon">
