basic settings menu layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Startpage</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/2b5d740196.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@200;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,9 +24,14 @@
     </div>
 
     <div class="sidemenu" id="sidemenu">
-        <!-- Add close button -->
-        <div class="close-button">
-            <i class="fas fa-times" id="close-button"></i>
+        <!-- Add settings options -->
+        <div class="settings-options">
+            <div class="setting">
+                <div class="setting-name">
+                   <p>Mouse Blob</p>
+                </div>
+                <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
+            </div>
         </div>
     </div>
         
