add ability to toggle blob

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="setting-name">
                    <p>Mouse Blob</p>
                 </div>
-                <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
+                <input type="checkbox" id="blob-switch" checked="true"><label for="blob-switch" >Toggle</label>
             </div>
         </div>
     </div>
