template for switching colors

--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
                 </div>
                 <input type="checkbox" id="blob-switch" checked="true"><label for="blob-switch" >Toggle</label>
             </div>
+            <div class="setting">
+                <div class="setting-name">
+                    <p>Background Color</p>
+                </div>
+                <input type="color" id="color-background" value="#ff0000">
+            </div>
+            <div class="setting">
+                <div class="setting-name">
+                   <p>Primary Color</p>
+                </div>
+                <input type="color" id="color-primary" value="#ff0000">
+            </div>
+            <div class="setting">
+                <div class="setting-name">
+                   <p>Secondary Color</p>
+                </div>
+                <input type="color" id="color-secondary" value="#ff0000">
+            </div>
         </div>
     </div>
         
@@ -78,6 +96,7 @@
     </div>
 </body>
 <script src="./cookies.js"></script>
+<script src="./color.js"></script>
 <script src="./script.js"></script>
 
 </html>
