--- a/index.html
+++ b/index.html
@@ -36,19 +36,28 @@
                 <div class="setting-name">
                     <p>Background Color</p>
                 </div>
-                <input type="color" id="color-background" value="#ff0000">
+                <input type="color" id="color-background">
             </div>
             <div class="setting">
                 <div class="setting-name">
                    <p>Primary Color</p>
                 </div>
-                <input type="color" id="color-primary" value="#ff0000">
+                <input type="color" id="color-primary">
             </div>
             <div class="setting">
                 <div class="setting-name">
                    <p>Secondary Color</p>
                 </div>
-                <input type="color" id="color-secondary" value="#ff0000">
+                <input type="color" id="color-secondary">
+            </div>
+            <div class="setting">
+                <div class="setting-name">
+                   <p>Icon Color</p>
+                </div>
+                <input type="color" id="color-icon">
+            </div>
+            <div class="setting" style="display:flex; justify-content:center">
+                <a class="update-button" onclick="updateColor()">Update</a>
             </div>
         </div>
     </div>
