set color presets

--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
                 <div class="setting-name">
                    <p>Mouse Blob</p>
                 </div>
-                <input type="checkbox" id="blob-switch" checked="true"><label for="blob-switch" >Toggle</label>
+                <input type="checkbox" id="blob-switch"><label for="blob-switch" >Toggle</label>
             </div>
             <div class="setting">
                 <div class="setting-name">
                     <p>Background Color</p>
                 </div>
-                <input type="color" id="color-background">
+                <input type="color" id="color-background" value="#101112">
             </div>
             <div class="setting">
                 <div class="setting-name">
                    <p>Primary Color</p>
                 </div>
-                <input type="color" id="color-primary">
+                <input type="color" id="color-primary" value="#00ffb8">
             </div>
             <div class="setting">
                 <div class="setting-name">
                    <p>Secondary Color</p>
                 </div>
-                <input type="color" id="color-secondary">
+                <input type="color" id="color-secondary" value="#13ce9a">
             </div>
             <div class="setting">
                 <div class="setting-name">
                    <p>Icon Color</p>
                 </div>
-                <input type="color" id="color-icon">
+                <input type="color" id="color-icon" value="#000000">
             </div>
             <div class="setting" style="display:flex; justify-content:center">
                 <a class="update-button" onclick="updateColor()">Update</a>
