--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-        
+
     <div class="grid">
         <div class="center">
             <div class="hexagon">
@@ -104,8 +104,8 @@
         </div>
     </div>
 </body>
-<script src="./cookies.js"></script>
-<script src="./color.js"></script>
-<script src="./script.js"></script>
+<script src="./cookies.js" defer></script>
+<script src="./script.js" defer></script>
+<script src="./color.js" async defer></script>
 
 </html>
