--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://discord.com/app" class="hex-icon" target="none">
-                    <i class="fa-brands fa-discord"></i>
+                <a href="https://reddit.com" class="hex-icon" target="none">
+                    <i class="fa-brands fa-reddit"></i>
                 </a>
             </div>
         </div>
