add the ability to toggle rotation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             </div>
             <div class="setting">
                 <div class="setting-name">
+                   <p>Rotation</p>
+                </div>
+                <input type="checkbox" id="rotation-switch"><label for="rotation-switch" >Toggle</label>
+            </div>
+            <div class="setting">
+                <div class="setting-name">
                     <p>Background Color</p>
                 </div>
                 <input type="color" id="color-background" value="#101112">
