--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://en.wikipedia.com/en" class="hex-icon" target="none">
+                <a href="https://en.wikipedia.com/" class="hex-icon" target="none">
                     <i class="fa-brands fa-wikipedia-w"></i>
                 </a>
             </div>
