update script paths

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         </div>
     </div>
 </body>
-<script src="./cookies.js" defer></script>
-<script src="./script.js" defer></script>
-<script src="./color.js" async defer></script>
+<script src="cookies.js" defer></script>
+<script src="script.js" defer></script>
+<script src="color.js" async defer></script>
 
 </html>
