replace target=none with target-blank

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="grid">
         <div class="center">
             <div class="hexagon">
-                <a href="https://github.com" class="hex-icon" target="none">
+                <a href="https://github.com" class="hex-icon" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
@@ -79,7 +79,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://reddit.com" class="hex-icon" target="none">
+                <a href="https://reddit.com" class="hex-icon" target="_blank">
                     <i class="fa-brands fa-reddit"></i>
                 </a>
             </div>
@@ -87,7 +87,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://www.youtube.com" class="hex-icon" target="none">
+                <a href="https://www.youtube.com" class="hex-icon" target="_blank">
                     <i class="fa-brands fa-youtube"></i>
                 </a>
             </div>
@@ -95,7 +95,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://mail.proton.me" class="hex-icon" target="none">
+                <a href="https://mail.proton.me" class="hex-icon" target="_blank">
                     <i class="fa-regular fa-envelope"></i>
                 </a>
             </div>
@@ -103,7 +103,7 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://en.wikipedia.com/" class="hex-icon" target="none">
+                <a href="https://en.wikipedia.com/" class="hex-icon" target="_blank">
                     <i class="fa-brands fa-wikipedia-w"></i>
                 </a>
             </div>
