--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <div></div>
         <div class="center">
             <div class="hexagon">
-                <a href="https://science.org" class="hex-icon" target="_blank">
-                    <i class="fa-regular fa-newspaper"></i>
+                <a href="https://getpocket.com" class="hex-icon" target="_blank">
+                    <i class="fa-brands fa-get-pocket"></i>
                 </a>
             </div>
         </div>
