add ability to change blob color

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                 </div>
                 <input type="color" id="color-icon" value="#000000">
             </div>
+            <div class="setting">
+                <div class="setting-name">
+                   <p>Blob Color</p>
+                </div>
+                <input type="color" id="color-blob" value="#ffffff">
+            </div>
             <div class="setting" style="display:flex; justify-content:center">
                 <a class="update-button" onclick="updateColor()">Update</a>
             </div>
